# viiper-v4

./: .gitignore  AUDIT_V4_RAPPORT_COMPLET.md  CURRENT_SPRINT.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  ROADMAP.md  SKILLS_EXAMPLES.md  SPRINT_1.1_SUMMARY.md  SPRINT_1.3_SUMMARY.md  SPRINT_1.4_PLAN.md  SPRINT_1.4_PROGRESS.md  TECHNICAL_AUDIT.md  alembic.ini  demo_landing_page.py  pyproject.toml  requirements.txt  setup.py  test_elite_design.py  test_grandeur_nature.py
.github/workflows/: ci.yml  docs.yml  release.yml
alembic/: env.py
alembic/versions/: 97e505033b27_initial_schema_with_projects_agents_.py
docs/: DEVELOPMENT_PLAN.md  elite_agents.md  persistence.md
examples/: quick_test.py  test_nvidia_llm.py  test_real_project.py  test_unified_llm.py
tests/: __init__.py  conftest.py  test_full_pipeline.py
tests/integration/: __init__.py  test_agents.py  test_elite_agents.py  test_persistence.py  test_pipeline_full.py
tests/unit/: test_ckb.py  test_core.py  test_new_agents.py  test_phase2.py  test_quality_gates.py  test_skills.py  test_sprint_1_4.py
viiper/: __init__.py
viiper/agents/: __init__.py  architecture.py  base.py  browser.py  collaboration.py  design_excellence.py  elite_architecture.py  elite_frontend.py  execution.py  factory.py  idea_generation.py  production.py  rentabilisation.py  research.py
viiper/ckb/: __init__.py  collective_knowledge.py
viiper/cli/: __init__.py  main.py
viiper/core/: __init__.py  health.py  phase.py  project.py  quality_gates.py  variant.py
viiper/llm/: __init__.py  nvidia_llm.py  unified_llm.py
viiper/orchestrator/: __init__.py  enhanced_orchestrator.py  iterative_loop.py  project_orchestrator.py
viiper/persistence/: __init__.py  database.py  models.py  repositories.py
viiper/security/: __init__.py  content_filter.py  prompt_injection.py
(+76 files in other folders)
